--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h2>Sobre</h2>
           <p>Professor de tecnologia no ensino superior e técnico. Interesse em metodologias ativas, ciência de dados educacionais e engenharia de software com foco no ensino.</p>
           <ul class="list">
-            <li>Ciência de dados educacionais e TRI</li>
+            <li>Ciência de dados educacionais</li>
             <li>Ciência de dados em saúde pública</li>
             <li>Desenvolvimento web didático</li>
             <li>TRI e avaliação em larga escala</li>
