--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="#inicio">
-        <img src="assets/logo.png" alt="Marca Wagner Jorcuvich" width="28" height="28">
+        <img src="assets/logo.png" alt="Marca Wagner Jorcuvich" class="logo">
         <strong>Wagner Jorcuvich</strong>
       </a>
   
