--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <section id="projetos" class="section">
       <div class="container">
-        <div class="section-head">
+        <div class="section-head projeticos">
           <h2>Projetos</h2>
           <div class="filters">
             <button class="chip is-active" data-cat="todos">Todos</button>
