refactor(html): links now have 'noreferrer' to not leak referrer information

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <img src="assets/logo.png" alt="Marca Wagner Jorcuvich" class="logo">
         <strong>Wagner Jorcuvich</strong>
       </a>
-  
+
       <!-- Botão hambúrguer para telas pequenas -->
       <button id="btn-menu" class="btn btn-ghost hamburger"
               aria-label="Abrir menu" aria-controls="drawer-nav" aria-expanded="false">
         <span class="hamb-line"></span>
         <span class="sr-only">Menu</span>
       </button>
-  
+
       <!-- Navegação desktop continua visível no desktop -->
       <nav class="nav" id="site-nav">
         <a href="#sobre" class="nav-link">Sobre</a>
@@ -36,7 +36,7 @@
         <button id="toggle-theme" class="btn btn-ghost" aria-pressed="true" title="Alternar tema">Tema</button>
       </nav>
     </div>
-  
+
     <!-- Gaveta mobile e overlay -->
     <div id="overlay" class="overlay" hidden></div>
     <nav id="drawer-nav" class="drawer" aria-hidden="true">
@@ -50,7 +50,7 @@
         <a href="#bancas">Bancas</a>
         <a href="#publicacoes">Publicações</a>
         <a href="#contato">Contato</a>
-        
+
         <button id="drawer-theme" class="btn btn-ghost" type="button">Tema</button>
       </div>
     </nav>
@@ -190,7 +190,7 @@
         <div>
           <h2>Contato</h2>
           <p>Use o formulário ao lado ou escreva para <button id="btn-email" class="link" data-email="jorcuvich@gmail.com">copiar email</button>.</p>
-          <p>Também estou em: <a id="lnk-linkedin" href="https://www.linkedin.com/in/jorcuvich/" target="_blank" rel="noopener" class="link">LinkedIn</a> · <a id="lnk-instagram" href="https://www.instagram.com/wagner.jorcuvich/" target="_blank" rel="noopener" class="link">Instagram</a></p>
+          <p>Também estou em: <a id="lnk-linkedin" href="https://www.linkedin.com/in/jorcuvich/" target="_blank" rel="noopener noreferrer" class="link">LinkedIn</a> · <a id="lnk-instagram" href="https://www.instagram.com/wagner.jorcuvich/" target="_blank" rel="noopener noreferrer" class="link">Instagram</a></p>
           <p>Retorno em horário comercial.</p>
         </div>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdtyOsp-4biSRcUKMxj-7JwT-HR-Y3EliuGCSKTq-QzIq_MMg/viewform?embedded=true" width="350" height="615" frameborder="0" marginheight="0" marginwidth="0"  style="border:none;">Carregando…</iframe>
