feat(theme): theme switch now has an icon and smoothly transitions between color schemes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a href="#bancas" class="nav-link">Bancas</a>
         <a href="#publicacoes" class="nav-link">Publicações</a>
         <a href="#contato" class="nav-link">Contato</a>
-        <button id="toggle-theme" class="btn btn-ghost" aria-pressed="true" title="Alternar tema">Tema</button>
+        <button id="toggle-theme" class="btn btn-theme" aria-pressed="true" title="Alternar tema"><i class="bx bxs-sun" id="theme-icon"></i></button>
       </nav>
     </div>
 
